Fixes styling so there is no gap between collapsed column header and primary column

--- a/src/components/activity-page/section.scss
+++ b/src/components/activity-page/section.scss
@@ -47,6 +47,10 @@
       grid-column: span 6;
       &.expand {
         grid-column: span 9;
+        &.max-aspect-ratio {
+          width: 105%;
+          left: -50px;
+        }
       }
     }
     .column.secondary {
@@ -166,6 +170,12 @@
       padding: 5px;
       flex-direction: column;
       justify-content: flex-start;
+      position: sticky;
+      top: 0;
+      div {
+        transform: rotate(-90deg);
+        top: 20px;
+      }
     }
 
     div {
@@ -173,17 +183,6 @@
       position: relative;
       white-space: nowrap;
       width: 30px;
-    }
-
-    &.collapsed {
-      height: 350px;
-      width: 45px;
-      padding: 5px;
-
-      div {
-        transform: rotate(-90deg);
-        top: 20px;
-      }
     }
   }
 }
